// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Long number component should render bigger than 100 1`] = `
<DocumentFragment>
  <span
    class="bubble--medium"
  >
    99+
  </span>
</DocumentFragment>
`;

exports[`Long number component should render different size 1`] = `
<DocumentFragment>
  <span
    class="bubble--large"
  >
    99+
  </span>
</DocumentFragment>
`;

exports[`Long number component should render with defaults 1`] = `
<DocumentFragment>
  <span
    class="bubble--medium"
  >
    10
  </span>
</DocumentFragment>
`;

exports[`Long number component should render without children 1`] = `
<DocumentFragment>
  <span
    class="bubble--medium"
  />
</DocumentFragment>
`;
